force-app/main/default/objects/ccrz__E_MenuI18N__c/ccrz__E_MenuI18N__c.object-meta.xml
<CustomObject>
    <description>Locale-specific version of menu, used for localizing the display name of menu.</description>
    <label>CC Menu I18N</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Menu I18N AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu I18N</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>