force-app/main/default/objects/ccrz__E_MenuI18N__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>Locale that is being defined by this entry. This field is used for displaying the Locale/Language drop-down, but not used to store any value for this record. The Language__c field is used to store the selected value.</description>
    <label>Locale</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>