force-app/main/default/objects/ccrz__E_MenuI18N__c/fields/ccrz__Menu__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Menu__c</fullName>
    <description>Reference to the CC Menu record being localized.</description>
    <label>CC Menu</label>
    <referenceTo>ccrz__E_Menu__c</referenceTo>
    <relationshipLabel>CC Menu I18N</relationshipLabel>
    <relationshipName>Menu_I18N</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>