force-app/main/default/objects/ccrz__E_MenuI18N__c/fields/ccrz__MenuI18NId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MenuI18NId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID field for this menu record, helpful in data loading.</description>
    <externalId>true</externalId>
    <label>Menu I18N Ext Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>